<?xml version="1.0"?>
<package>
  <name>px4_simulation_stack</name>
  <version>1.0.0</version>
  <description>The px4_simulation_stack package</description>

  <maintainer email="t_ueno@eis.hokudai.ac.jp">Takaki Ueno</maintainer>

  <author>Masaru Sakuma</author>
  <author>Seiko Piotr Yamaguchi</author>
  <author>Takaki Ueno</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
