<?xml version="1.0"?>
<package>
  <name>px4_simulation_stack</name>
  <version>1.0.0</version>
  <description>The px4_simulation_stack package</description>

  <maintainer email="ueknot@gmail.com">Takaki Ueno</maintainer>

  <author>Masaru Sakuma</author>
  <author>Seiko Piotr Yamaguchi</author>
  <author>Takaki Ueno</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>doxygen</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
