<?xml version="1.0"?>
<package format="2">
  <name>px4_simulation_stack</name>
  <version>1.0.0</version>
  <description>The px4_simulation_stack package</description>

  <maintainer email="ueknot@gmail.com">Takaki Ueno</maintainer>

  <author>Masaru Sakuma</author>
  <author>Seiko Piotr Yamaguchi</author>
  <author>Takaki Ueno</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>laser_assembler</depend>
  <depend>mavros_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>octomap</depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>doxygen</build_depend>

  <exec_depend>laser_filters</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
</package>
